src/frontend/components/global.scss
$background-gray: #3c3f41;
$background-darkgray: #2b2b2b;
$background-darkgray-active: #171717;
$font-lighter-green: #629755a1;
$font-light-green: #629755;
$font-green: #78d561;
$font-gold: #e8b923;
$font-white: #adadad;

$shadow-bottom: 0 0 20px 0;

$default-font-size: 0.8em;
$default-line-height: 1.2em;

$default-transition-duration: 0.2s;

$error: #ed4a4a;
$warn: #ffd370;
$info: #03a9f4;
$debug: #dadde0;
$success: #78d561;
$notify-front: #dadde0;
$notify-front-weak: #dadde082;
$notify-back: #4e5052;

$card-height: 100px;

/**
Source: https://material-components.github.io/material-components-web-catalog/#/component/elevation
 */
@mixin boxShadow($dpi) {
  @if $dpi==4 {
    box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
  }
  @else if $dpi==8 {
    box-shadow: 0 5px 5px -3px rgba(0,0,0,.2), 0 8px 10px 1px rgba(0,0,0,.14), 0 3px 14px 2px rgba(0,0,0,.12);
  }
  @else if $dpi==16 {
    box-shadow: 0 8px 10px -5px rgba(0,0,0,.2), 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12);
  }
  @else if $dpi==24 {
    box-shadow: 0 11px 15px -7px rgba(0,0,0,.2), 0 24px 38px 3px rgba(0,0,0,.14), 0 9px 46px 8px rgba(0,0,0,.12);
  }
}

@mixin FadeInLastLine() {
  position: relative;
  overflow: hidden;
  &::after {
    content: '';
    text-align: right;
    position: absolute;
    bottom: 0;
    right: 0;
    width: 70%;
    height: $default-line-height;
    background: linear-gradient(to right, rgba(78, 80, 82, 0), rgba(78, 80, 82, 1) 90%);
  }
}

@mixin customScrollBar {
  &::-webkit-scrollbar {
    width: 4px;
    &-track {
      background-color: rgba(150, 150, 150, 0);
    }
    &-thumb {
      background-color: $font-white;
    }
  }
}

.default-font-size {
  font-size: $default-font-size;
  line-height: $default-line-height;
}

